Added full CRUD functionality for issues in AreaGUI
Also started working on IssueGUI for displaying and interacting with projects within issues